Closed Bug 604058 Opened 15 years ago Closed 15 years ago

Fonts on some sites are smudgy and green either all the time or when loading/scrolling

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: fehe, Assigned: cjones)

References

()

Details

(Keywords: fonts, polish, regression)

Attachments

(1 file, 1 obsolete file)

On a Windows 7 x64 system with intel graphics, blue fonts on certain sites end up being a smudgy greenish blue. On the following page, the regression is apparent always: http://wiki.mikrotik.com/wiki/Bandwidth_Managment_and_Queues On this page, the regression is apparent when loading or scrolling, disappearing 4 seconds after a load/scroll event: http://www.dlink.ca/products/category/?cid=15#sub_127 There is no workaround, as there are no updated display drivers for my system. I've already beat this dead horse. Regression window: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=9024046121ca&tochange=05ea34e1b2a1 Likely cause: bug 600908 Hardware Platform: Dell Vostro Notebook 3500 Intel Core i3 M350 Intel HD Graphics (river version: 8.15.10.2119)
Summary: Fonts on some sites are blurry and green either all the time or when loading/scrolling → Fonts on some sites are smudgy and green either all the time or when loading/scrolling
blocking2.0: --- → ?
IU, can you also paste the graphics section of about:support?
Graphics Adapter Description Intel(R) HD Graphics Vendor ID8086 Device ID0046 Adapter RAM Unknown Adapter Driversig dumd64 igd10umd64 igdumdx32 igd10umd32 Driver Version8.15.10.2119 Driver Date4-21-2010 Direct2D Enabled false DirectWrite Enabled false GPU Accelerated Windows 0/2
Hm. It seems unlikely that just making shadowable layers retained would cause this, but maybe? Chris, any ideas?
Oh fffuuu. That condition should have been |&& (!AsShadowableLayer() || !AsShadowableLayer()->HasShadow())|. Review fail. (No tests for this rendering case?)
Assignee: nobody → jones.chris.g
Attachment #482918 - Flags: review?(joe)
Comment on attachment 482918 [details] [diff] [review] Shadowable layers might not have shadows Can you rewrite the condition as !(AsShadowableLayer() && AsShadowableLayer()->HasShadow()) so it's a little easier to read/understand?
Attachment #482918 - Flags: review?(joe) → review+
Sure. Oh, and before I break builds, this also needs to be !(AsShadowableLayer() && #ifdef MOZ_IPC AsShadowableLayer()->HasShadow() #else false #endif ) Still OK or would you prefer a refactoring to avoid the extra ifdef? (Say, to add CantNotRetain() or something.)
May as well just factor it out while you're in here, and then I can rereview.
Attachment #482924 - Flags: review?(joe) → review+
blocking2.0: ? → betaN+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Verified fixed with: http://hg.mozilla.org/mozilla-central/rev/675c7c026824 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101010 Firefox/4.0b8pre Thanks
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: