Bug 604058: Shadowable layers might not have shadows. r=joe a=blocking-betaN